--- a/app/src/main/res/layout/fragment_recylerview.xml
+++ b/app/src/main/res/layout/fragment_recylerview.xml
@@ -8,9 +8,9 @@
     tools:context=".MainActivity">
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
+        android:id="@+id/rv"
         android:layout_height="match_parent"/>
 
 
