--- a/app/src/main/res/layout/activtiy_first.xml
+++ b/app/src/main/res/layout/activtiy_first.xml
@@ -13,11 +13,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-
     <Button
         app:layout_constraintTop_toBottomOf="@+id/button1"
         android:text="handlerThread"
         android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        android:text="Drawable"
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
