--- a/app/src/main/res/layout/activtiy_first.xml
+++ b/app/src/main/res/layout/activtiy_first.xml
@@ -27,5 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <com.gong.nature.view.CustomView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
