--- a/app/src/main/res/layout/activtiy_first.xml
+++ b/app/src/main/res/layout/activtiy_first.xml
@@ -27,8 +27,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <com.gong.nature.view.CustomView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <Button
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        android:text="surfaceView加载大帧率动画"
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
 </android.support.constraint.ConstraintLayout>
